fixed scrollbar issue on container reactor

--- a/src/styles/reactor.scss
+++ b/src/styles/reactor.scss
@@ -24,8 +24,7 @@
 }
 
 .game-session-list-container {
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: hidden;   
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
